--- a/style.css
+++ b/style.css
@@ -4,9 +4,17 @@ body {
     border: none;
     outline: none;
     /* background-color: #eee; */
-    background-color: #e35267;
+    /*background-color: #e35267;*/
     box-shadow: none;
     font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif;
+}
+
+body { background-image: url(images/background-photo.jpg); 
+    background-position: center center; 
+    background-repeat: no-repeat;
+    background-attachment: fixed; 
+    background-size: cover; 
+    background-color: #464646; 
 }
 
 main {
